[gd_scene load_steps=6 format=3 uid="uid://0myhdotblvlt"]

[ext_resource type="FontFile" uid="uid://dvt5tcuipcgx6" path="res://assets/fonts/Munro.ttf" id="1_d3csq"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_vc6u4"]
[ext_resource type="Script" path="res://addons/simple-gui-transitions/transition.gd" id="2_nhebd"]
[ext_resource type="PackedScene" uid="uid://bkksn36jcw54k" path="res://scenes/reusable/input_button.tscn" id="4_i1fim"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="4_vhwld"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc6u4")

[node name="gui_transition_p" type="Node" parent="."]
script = ExtResource("2_nhebd")
animation_enter = 5
animation_leave = 5
layout = NodePath("../pause/CanvasLayer/MarginContainer/pause_c")
group = NodePath("../pause/CanvasLayer/MarginContainer/pause_c")

[node name="gui_transition_s" type="Node" parent="."]
script = ExtResource("2_nhebd")
animation_enter = 0
animation_leave = 1
layout = NodePath("../settings/CanvasLayer/PanelContainer")
layout_id = "settings_c"
group = NodePath("../settings/CanvasLayer/PanelContainer")

[node name="pause" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="pause"]

[node name="MarginContainer" type="MarginContainer" parent="pause/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -141.0
offset_right = 55.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pause_c" type="VBoxContainer" parent="pause/CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="resume" type="Button" parent="pause/CanvasLayer/MarginContainer/pause_c"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_d3csq")
theme_override_font_sizes/font_size = 32
text = "Resume"
metadata/_edit_lock_ = true

[node name="restart" type="Button" parent="pause/CanvasLayer/MarginContainer/pause_c"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_d3csq")
theme_override_font_sizes/font_size = 32
text = "Restart"
metadata/_edit_lock_ = true

[node name="settings" type="Button" parent="pause/CanvasLayer/MarginContainer/pause_c"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_d3csq")
theme_override_font_sizes/font_size = 32
text = "Settings
"
metadata/_edit_lock_ = true

[node name="quit" type="Button" parent="pause/CanvasLayer/MarginContainer/pause_c"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_d3csq")
theme_override_font_sizes/font_size = 32
text = "Quit"
metadata/_edit_lock_ = true

[node name="settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_vhwld")

[node name="CanvasLayer" type="CanvasLayer" parent="settings"]

[node name="PanelContainer" type="PanelContainer" parent="settings/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -242.0
offset_right = 420.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="settings/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="settings/CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="action_list" type="VBoxContainer" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="input_button" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/action_list" instance=ExtResource("4_i1fim")]
layout_mode = 2

[node name="input_button2" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/action_list" instance=ExtResource("4_i1fim")]
layout_mode = 2

[node name="input_button3" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/action_list" instance=ExtResource("4_i1fim")]
layout_mode = 2

[node name="input_button4" parent="settings/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/action_list" instance=ExtResource("4_i1fim")]
layout_mode = 2

[connection signal="pressed" from="pause/CanvasLayer/MarginContainer/pause_c/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause/CanvasLayer/MarginContainer/pause_c/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause/CanvasLayer/MarginContainer/pause_c/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="pause/CanvasLayer/MarginContainer/pause_c/quit" to="." method="_on_quit_pressed"]
